Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.6.0 Beta
-
Fix Version/s: 5.6.1
-
Component/s: Quick: Controls 2
-
Labels:None
-
Commits:a055629f43cf8589ff6d69e46b2610429aaa4167
Description
I'm trying to create a SwipeView with three subpages, each containing a label. It's only working when I embed the Labels into Items, see attached code. This is a little bit confusing for me, because Label is derived from Item, if I'm not wrong. (Not sure whether this is a bug or I did something wrong.)
Attachments
Issue Links
- resulted in
-
QTBUG-99547 PathView item does not appear in certain circumstance
-
- Closed
-
For Gerrit Dashboard: QTBUG-51078 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
411222,1 | SwipeView: position the pages adjacent to each other initially | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: NEW | 0 | 0 |
151441,2 | SwipeView: cull items outside the view | 5.6 | qt/qtquickcontrols2 | Status: MERGED | +2 | 0 |
390736,4 | SwipeView: don't cull every child item that gets added | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
394180,2 | SwipeView: don't cull every child item that gets added | 6.2 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
394181,2 | SwipeView: don't cull every child item that gets added | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
394205,1 | SwipeView: don't cull every child item that gets added | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: ABANDONED | 0 | 0 |
394260,2 | SwipeView: don't cull every child item that gets added | tqtc/lts-5.15 | qt/tqtc-qtquickcontrols2 | Status: MERGED | +2 | 0 |
410346,6 | SwipeView: position the pages adjacent to each other initially | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
411219,2 | SwipeView: position the pages adjacent to each other initially | 6.3 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
411221,2 | SwipeView: position the pages adjacent to each other initially | tqtc/lts-6.2 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |