SwipeView: cull items outside the view

This hides them until they become visible in the view. Hiding them
explicitly is not an option, because then they will never show up.
This technique is used in QQuickItemView::initItem() and
FxViewItem::setVisible().

Change-Id: I3a3779e11a57c6dcf94ffc834f6e920449aea74a
Task-number: QTBUG-51078
Task-number: QTBUG-51669
Reviewed-by: Mitch Curtis <mitch.curtis@theqtcompany.com>