src/templates/qquickswipeview.cpp
@@ -142,6 +142,7 @@ void QQuickSwipeView::geometryChanged(const QRectF &newGeometry, const QRectF &o
 void QQuickSwipeView::itemAdded(int, QQuickItem *item)
 {
     Q_D(QQuickSwipeView);
+    QQuickItemPrivate::get(item)->setCulled(true); // QTBUG-51078, QTBUG-51669
     if (isComponentComplete())
         item->setSize(QSizeF(d->contentItem->width(), d->contentItem->height()));
 }
